[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/default_font.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Popup.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.584314, 0.584314, 0.584314, 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
use_filter = true
font_data = ExtResource( 1 )

[node name="Popup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -150.0
margin_top = -17.5
margin_right = 150.0
margin_bottom = 17.5
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Popup information"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
